...
        Label(title, systemImage: systemImage)
    }

    var title: String {
        switch self {
        case .home:
            "首页"
        case .ai:
            "AI 绘画"
        case .images:
            "图片"
        case .music:
            "音乐"
        case .more:
            "更多"
        }
    }

    var systemImage: String {
...
